[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -23.0
margin_top = 35.0
margin_right = 22.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_constants", "custom_fonts" ]

[node name="MessageLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -80.0
margin_right = 214.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="StartButton" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -242.0
margin_right = 95.0
margin_bottom = -158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="ScoreButton" type="Button" parent="." index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -108.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Score"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="MessageTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Left" type="TouchScreenButton" parent="." index="5"]

position = Vector2( 279, 588 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_left"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Right" type="TouchScreenButton" parent="." index="6"]

position = Vector2( 404, 587 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Up" type="TouchScreenButton" parent="." index="7"]

position = Vector2( 342, 524 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_up"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Down" type="TouchScreenButton" parent="." index="8"]

position = Vector2( 344, 651 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_down"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="ScoreButton" to="." method="_on_ScoreButton_pressed"]

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]


